# Dynapad

./: .gitignore  CMakeLists.txt  INSTALL  Makefile.am  README  README.Cygwin  README.MacOSX  README.emacs  README.macOS  README.suse  README.ubuntu  README.v299  autogen.sh  builtin.cpp  configure.ac  configure.in  diff.v299  dynapad-c-api.ss  dynapad.cpp  dynapad.rkt  dynapad.ss  mystartxwin.sh  tclSchemeNotify.c
NOTES/: Tcl  Tcl.cnt  Tk  Tk.cnt  X  X.cnt  brushing  compile  events  findcmd  framerate  refinement  remote-objects.txt  rendering_text  wish-list.txt
NOTES/freetype/: README  The_X_Rendering_Extension.htm  Xft_tutorial.htm  xft.ps  xrender.ps
NOTES/visionmaker/: 3400commands.doc  README  s20.c  test.rkt  test.ss
apps/: fancy-draw.ss  slides.rkt  slides.ss
apps/amaya/: Amaya-example.txt  README  amaya.rkt  amaya.ss
apps/anno/: README.txt  anno.rkt  anno.ss
apps/bshapiro/: KPreviewer.cpp  KPreviewer.h  README  ffi.cpp  file-browser-backup7.rkt  (+4 more)
apps/dt/dt_xmouse/: Makefile.am  README  configure  configure.in  dt_xmouse.c
apps/dt/dtviz/: AUTHORS  Makefile.am  configure  configure.in  dtviz.c
apps/dt/libdt/: AUTHORS  Makefile.am  README  configure  configure.in  dt.c  dt.h  dtcal.c  dtcal.h  dtframe.c  dtframe.h  dtmouse.c  dtmouse.h  dtstats.c  dtstats.h  dtucsd.c  dtucsd.h  dtusbio.c  dtusbio.h  gauss.c  gauss.h  globals.h  libdt.h
apps/dt/libdt/doc/: modes.txt
apps/dt/touchd/: Makefile.am  configure  configure.in  touchd.c
documentation/: codegraph.ss  write-examples.ss
dynapad/: base.rkt  bind.rkt  classic.rkt  container-text.rkt  container.rkt  copy.rkt  dynapad-c-api.rkt  ffs.rkt  image-composite.rkt  image.rkt  import.rkt  info.rkt  libdynapad-wrapper.rkt  pad-state.rkt  pdf.rkt  save.rkt  seval.rkt  spd.rkt  undo-state.rkt
dynapad-collects/: info.rkt
extensions/: dynapad.cpp
guide/: guide.ps
pad/: Announce  Bugs  CMakeLists.txt  ChangeLog  Compiling.Notes  Copyright  INSTALL  License  LicenseTerms  Makedist  README  README.Redhat60  README.bindist  README.scheme  README.windist  ToDo  pad.1  pad.in  pad.spec  paddraw.bindist  paddraw.in  paddraw.install.in
pad/bitmaps/: On_drawing.xpm  On_filledOval.xpm  On_filledPolygon.xpm  On_filledRect.xpm  On_grapharc.xpm  On_graphedge.xpm  On_hand.xpm  On_hyperlink.xpm  On_lasso.xpm  On_letter.xpm  On_line.xpm  On_lines.xpm  On_marquee.xpm  On_navline.xpm  On_oval.xpm  On_pointer.xpm  On_polygon.xpm  On_portal.xpm  On_rect.xpm  color_arrowdown.xbm  color_arrowup.xbm  color_config.xbm  crosshair.xbm  drag.xbm  dragmask.xbm  drawing.xbm  drawing.xpm  drawing2.xbm  filledOval.xbm  filledPolygon.xbm  filledRect.xbm  grapharc.xbm  graphedge.xbm  hand.xbm  handmask.xbm  hollowpointer.xbm  hollowpointermask.xbm  hollowselect.xbm  hollowselectmask.xbm  hourglassmask.xbm  (+28 more)
pad/bitmaps/animation/: back2.xbm  ff2.xbm  play2.xbm  rec2.xbm  rew2.xbm  speed.xbm  stop2.xbm
pad/doc/: api.txt  fileformat.txt  guide.ps  kpl.troff  paddraw.html  reference.ps
pad/draw/: about_poetry.pad  animation.tcl  animation_engine.tcl  bug.tcl  calendar.timeline  chkbutn.kpl  chkbutn.tcl  choice.kpl  choice.tcl  coloredit.tcl  debugevent.tcl  demo.pad  desktop.tcl  draw.tcl  events.tcl  file.tcl  frame.kpl  frame.tcl  graph.kpl  graph.tcl  grid.tcl  help.tcl  help.txt  history.timeline  html.tcl  illustrator.tcl  index.tcl  layers.tcl  layout.tcl  lens.tcl  lineprops.tcl  link.tcl  menu.tcl  misc.tcl  msml.tcl  navigation.tcl  options.tcl  outline.tcl  pad.outline  pad.tcl  (+23 more)
pad/draw/scrapbook/: bus.pad  camera.pad  casper.pad  computer.pad  fish.pad  hat_baseball.pad  hat_flower.pad  hat_tophat.pad  planet.pad  pumpkin.pad  pumpkin_face_1.pad  pumpkin_face_2.pad  pumpkin_face_3.pad  rex.pad  sedan.pad  star.pad  steg.pad  sub.pad  trees.pad  volcanoes.pad
pad/draw/window_shapes/: card.tcl  card1.tcl  card2.tcl  card3.tcl  cloud.tcl  horiz_page.tcl  pad.tcl  petal.tcl  tv.tcl  zig.tcl
pad/generic/: Buffer.cpp  Buffer.h  CodingConventions  ZFont.cpp  ZFont.h  ZFontType1.cpp  ZFontType1.h  ZFontType1Interp.cpp  ZFontType1Interp.h  alias.cpp  alias.h  alist.cpp  alist.h  api.cpp  api.h  bbox.cpp  bbox.h  bind.cpp  bind.h  border.cpp  border.h  button.cpp  button.h  callback.cpp  callback.h  clist.cpp  clist.h  color.cpp  color.h  colorcube.cpp  colorcube.h  colordb.cpp  component.cpp  component.h  container.cpp  container.h  curves.cpp  curves.h  defs.h  display.cpp  (+95 more)
pad/html/: aar.html  alaska-page.html  alaska-story.html  bug.html  bug.tcl  home-page.html  outline.html  papers.html  sigchi-pad_94-abstract.html  sigchi-pad_94.html
pad/kpl/: COPYRIGHT
pad/kpl/lib/: std.kpl
pad/kpl/src/: clip.c  dxf2raw.c  eval_slider.c  eval_spline.c  hash.c  hash.h  kpl.c  kpl.h  kpl_exec.c  kpl_makePcode.c  kpl_parse.c  kpl_tokens  kpl_tokens.h  kpl_wrap_lib.c  kpl_wrap_libx.c  kpl_wrap_matrix.c  kpl_wrap_physics.c  kpl_wrap_pump.c  kpl_wrap_sumvec.c  kpl_wrap_tcl.c  kpl_wrap_tracking.c  kpl_wrap_vec.c  letter_to_vectors.c  lib.c  mapping.c  matrix.c  noise.c  physics.c  pnoise.c  proj.c  pump.c  rpy.c  sort_box_list.c  sumvec.c  test_hash.c  tmesh.c  tracking.c  vec.c  virtual_space.c
pad/perl/: Boot.c  ChangeLog  MANIFEST  Makefile.PL  Pad.pm  Pad.xs  TODO  boot.h  pad-perl.c  pad-perl.h  pad_test.pl  tclAppinit.c  test.pl  tkMain.c
pad/testapi/: README  makefile  testapi.cpp  tkAppInit.cpp  tkMain.cpp
pad/unix/: CMakeLists.txt  Makefile.am  config.h.bak  config.h.in  config.h.in.bak  configure  configure.ac  configure.ac.bak  configure.in  dep  dep.awk  shm.cpp  shm.h  tkAppInit.cpp  x-win-shape.cpp
pad/win/: Bugs  README  README.develop  greeting.txt  makefile  padinit  stubs42.c  tkConsole.cpp  tkWinInt.h  winMain.cpp  winX.cpp  winX.h  windefs.h  winregion.cpp  winregion.h  winxdr.cpp  xdr.h
pad/win/rc/: drag.cur  hand.cur  hollowpointer.cur  hollowselect.cur  hourglass.cur  hyperlink.cur  in.cur  mag_in_glass.cur  mag_out_glass.cur  out.cur  padpencil.cur  padwish.rc  pick.cur  pointer.cur  portalpencil.cur  press.cur  select.cur  tk.rc
pad/win/sys/: utsname.h
test/: load_dynapad.rkt  test_history.rkt
(+539 files in other folders)
