dnl Process this file with autoconf to produce a configure script.
AC_INIT(dt_xmouse.c)

AM_INIT_AUTOMAKE(dt_xmouse,0.1)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.
AC_CHECK_LIB(m, pow)
AC_CHECK_LIB(X11, XmuPrintDefaultErrorMessage)
AC_CHECK_LIB(Xtst, XTestQueryExtension)

dnl Checks for header files.
AC_PATH_XTRA
  AC_SUBST(X_CFLAGS)
  AC_SUBST(X_LIBS)
  AC_SUBST(X_EXTRA_LIBS)
  AC_SUBST(X_PRE_LIBS)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_HEADER_STDC

AC_OUTPUT(Makefile)
