lib_LIBRARIES = libdt.a
include_HEADERS = dt.h dtcal.h dtframe.h dtmouse.h dtstats.h dtucsd.h dtusbio.h gauss.h globals.h libdt.h
libdt_a_SOURCES = dt.c dtcal.c dtframe.c dtmouse.c dtstats.c dtucsd.c dtusbio.c gauss.c
AM_CFLAGS = -ggdb -ansi -pedantic -Wall -Wstrict-prototypes -Wnested-externs -U__STRICT_ANSI__
