dnl Process this file with autoconf to produce a configure script.
AC_INIT(touchd.c)
AM_INIT_AUTOMAKE(touchd,0.1)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_HEADER_STDC

AC_OUTPUT(Makefile)
